
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fbuf ;
typedef int FILE ;


 int fclose (int *) ;
 int * fgets (char*,int,int *) ;
 int * fopen (char*,char*) ;
 int memset (char*,int ,int) ;
 int perror (char*) ;
 scalar_t__ strlen (char*) ;
 int strncmp (char*,char*,int) ;

int check_mod() {
 FILE *proc_modules;
 char fbuf[256];

 proc_modules = fopen("/proc/modules", "r");

 if (proc_modules < 0) {
  perror("fopen");
  return -1;
 }

 memset(fbuf, 0, sizeof(fbuf));

 while(fgets(fbuf, 256, proc_modules) != ((void*)0)) {
  if (strlen(fbuf) == 0)
   continue;

  if (!strncmp("ip_tables", fbuf, 9)) {
   fclose(proc_modules);
   return 0;
  }
 }

 fclose(proc_modules);
 return -1;
}
